@@ -3,6 +3,10 @@ Revision history for firebird_fdw
 0.1.6	2014-01-??
 	- Push down bitwise operators << and >> (FB 2.1 and later)
 	- Push down two-argument form of SUBSTRING()
+	- Push down CONCAT()
+	- Don't check for mutable functions - we are explicitly
+	  whitelisting functions which can be pushed down
+	  (need to double-chekc if that's a valid approach)
 
 0.1.5   2014-01-20
 	- Add basic Firebird version detection to ensure that only
